[project]
name = "lsttrends"
version = "0.0.1"
description = "Analyze summer Land Surface Temperature trends from satellite imagery"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["lsttrends", "LST", "remote sensing", "climate", "urban heat island"]
license = "MIT"  # SPDX identifier is correct

authors = [
  {name = "Alex McCorkel", email = "amccorketutoring@gmail.com"},
]

classifiers = [
    "Intended Audience :: Developers", 
    "Natural Language :: English",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Atmospheric Science"
]


[project.entry-points."console_scripts"]
lsttrends = "lsttrends.cli:main"

[project.optional-dependencies]
all = [
    "pandas",
]

[tool]
[tool.setuptools.packages.find]
include = ["lsttrends*"]
exclude = ["docs*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.distutils.bdist_wheel]
universal = true

[tool.bumpversion]
current_version = "0.0.1"
commit = true
tag = true

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'

[[tool.bumpversion.files]]
filename = "lsttrends/__init__.py"
search = '__version__ = "{current_version}"'
replace = '__version__ = "{new_version}"'

[tool.flake8]
exclude = ["docs"]
max-line-length = 88

[project.urls]
Homepage = "https://github.com/amccorketutoring/lsttrends"
Documentation = "https://amccorketutoring.github.io/lsttrends/"
Source = "https://github.com/amccorketutoring/lsttrends"
Issues = "https://github.com/amccorketutoring/lsttrends/issues"

Examples = "https://amccorketutoring.github.io/lsttrends/examples/"

[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
