[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lsttrends"
dynamic = ["version"]
description = "Analyze long-term land surface temperature (LST) trends, urban morphology, and heat vulnerability using Google Earth Engine (GEE), statistical analysis, spatial clustering, and visualization."
readme = { file = "README.md", content-type = "text/markdown; charset=UTF-8" }
requires-python = ">=3.8"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Alex McCorkel", email = "amccorketutoring@gmail.com" }
]
keywords = [
    "LST", "urban heat island", "remote sensing", "Google Earth Engine",
    "geospatial analysis", "urban morphology", "heat vulnerability"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Visualization",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    "Framework :: Jupyter"
]
dependencies = [
    "numpy>=1.18",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "statsmodels>=0.13",
    "matplotlib>=3.4",
    "seaborn>=0.11",
    "geopandas>=0.10",
    "rtree>=0.9",
    "mgwr>=2.2",
    "jupyterlab>=3.0",
    "ipykernel>=6.0",
    "earthengine-api>=0.1.0"
]

[project.optional-dependencies]
viz = ["matplotlib>=3.4", "seaborn>=0.11"]
spatial = ["geopandas>=0.10", "rtree>=0.9", "mgwr>=2.2"]
jupyter = ["jupyterlab>=3.0", "ipykernel>=6.0"]
gee = ["earthengine-api>=0.1.0"]
full = [
    "matplotlib>=3.4",
    "seaborn>=0.11",
    "geopandas>=0.10",
    "rtree>=0.9",
    "mgwr>=2.2",
    "jupyterlab>=3.0",
    "ipykernel>=6.0",
    "earthengine-api>=0.1.0"
]

[project.scripts]
lsttrends = "lsttrends.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["lsttrends", "lsttrends.*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"lsttrends.gee" = ["*.js"]
"lsttrends" = ["assets/logo.png"]

[tool.setuptools.dynamic]
version = { attr = "lsttrends.__version__" }
